--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,16 @@
             <version>2.4</version>
         </dependency>
         <!-- log end -->
+
+
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
