--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,14 @@
             <version>4.5.6</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
