--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,8 +7,7 @@ log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 
-
-log4j.appender.stdout.layout.ConversionPattern =%d{yyyy-MM-dd HH\:mm\:ss} [%5p] - %c -%F(%L) -%m%n
+log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%5p] - %c -%F(%L) -%m%n
 
 ### 输出到日志文件 ###
 ##  其中File 可以采用绝对路径 亦可以采用相对路径 catalina.home 是tomcat目录  如果没有logs文件夹 将会报错  ##
@@ -16,7 +15,7 @@ log4j.appender.stdout.layout.ConversionPattern =%d{yyyy-MM-dd HH\:mm\:ss} [%5p] 
 ##  绝对路径如：e:/salesmanb2bError.log ##
 log4j.logger.daily=INFO,D
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = ${catalina.home}/logs/helloworld/helloworld.log
+log4j.appender.D.File = ${catalina.home}/logs/tomato/tomato.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = INFO
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
