--- a/pom.xml
+++ b/pom.xml
@@ -308,6 +308,9 @@
                 <plugin>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>3.2.0</version>
+                    <configuration>
+                        <webXml>WebContent\WEB-INF\web.xml</webXml>
+                    </configuration>
                 </plugin>
                 <plugin>
 
