--- a/pom.xml
+++ b/pom.xml
@@ -309,7 +309,7 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>3.2.0</version>
                     <configuration>
-                        <webXml>WebContent\WEB-INF\web.xml</webXml>
+                        <webXml>src\main\webapp\web.xml</webXml>
                     </configuration>
                 </plugin>
                 <plugin>
