--- a/pom.xml
+++ b/pom.xml
@@ -265,8 +265,6 @@
         </dependency>
         <!-- log end -->
 
-
-
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -281,18 +279,16 @@
             <version>20180813</version>
         </dependency>
 
-
     </dependencies>
 
     <build>
         <finalName>tomato</finalName>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+        <pluginManagement>
             <plugins>
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.0.0</version>
                 </plugin>
-                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.0.2</version>
@@ -313,7 +309,6 @@
                     </configuration>
                 </plugin>
                 <plugin>
-
                     <artifactId>maven-install-plugin</artifactId>
                     <version>2.5.2</version>
                 </plugin>
@@ -326,9 +321,7 @@
                     <artifactId>mybatis-generator-maven-plugin</artifactId>
                     <version>1.3.2</version>
                     <configuration>
-                        <!--允许移动生成的文件-->
                         <verbose>true</verbose>
-                        <!--允许覆盖生成的文件-->
                         <overwrite>true</overwrite>
                     </configuration>
                 </plugin>
